force-app/main/default/objects/National_Outings_Trip_Itinerary__c/National_Outings_Trip_Itinerary__c.object-meta.xml
<CustomObject>
    <label>National Outings Trip Itinerary</label>
    <nameField>
        <displayFormat>TI-{00000000}</displayFormat>
        <label>National Outings Trip Itinerary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>National Outings Trip Itineraries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>