force-app/main/default/objects/National_Outings_Trip_Itinerary__c/fields/Camp_Lodge_Location__c.field-meta.xml
<CustomField>
    <fullName>Camp_Lodge_Location__c</fullName>
    <label>Camp/Lodge Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>