force-app/main/default/objects/National_Outings_Trip_Itinerary__c/fields/Day_Number__c.field-meta.xml
<CustomField>
    <fullName>Day_Number__c</fullName>
    <label>Day Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>