force-app/main/default/objects/National_Outings_Trip_Itinerary__c/fields/Land_Agency__c.field-meta.xml
<CustomField>
    <fullName>Land_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Land Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>National Outings Trip Itineraries</relationshipLabel>
    <relationshipName>National_Outings_Trip_Itineraries</relationshipName>
    <type>Lookup</type>
</CustomField>