force-app/main/default/objects/National_Outings_Trip_Itinerary__c/fields/Trails_Used__c.field-meta.xml
<CustomField>
    <fullName>Trails_Used__c</fullName>
    <label>Trails Used</label>
    <type>TextArea</type>
</CustomField>